# formalization-flow

./: .gitignore  README.md  makefile  pyproject.toml
docs/plans/: 2026-06-13-mvp.md
docs/specs/: 2026-06-13-design.md
examples/: plastex.cfg  unit_hom.tex
examples/unit_hom/: index.html  unit_hom.lean
src/formalization_flow/Renderers/lean4/: __init__.py
sty/: formalizationflow.sty
tests/: conftest.py  test_environments.py  test_lean4.py  test_macros.py  test_pdf.py
