[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formalization-flow"
version = "0.0.1"
description = "A plasTeX plugin for writing structured LaTeX theorems that compile to sorry-filled Lean 4 skeletons"
requires-python = ">=3.9"
dependencies = [
    "plasTeX>=3.1",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
formalization_flow = [
    "Packages/renderer_templates/html5/*.jinja2",
    "Packages/renderer_templates/lean4/assumption/*.jinja2",
    "Packages/renderer_templates/lean4/conclusion/*.jinja2",
]
